[package]
name = "async-fusex"
version = "0.1.0"
edition = "2024"

[dependencies]
aligned-utils = "1.0.2"
anyhow = "1.0.100"
async-trait = "0.1.89"
better-as = "0.2.0"
clippy-utilities = "0.1.0"
crossbeam-channel = "0.5.15"
crossbeam-utils = "0.8.21"
memchr = "2.7.6"
nix = { version = "0.28.0", features = ["fs", "ioctl", "signal", "user", "mount", "socket", ] }
serde = { version = "1.0.228" ,features = ["derive"]}
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tracing = "0.1.43"
#macro-utils = {path = "../macro-utils"}
futures = "0.3.31"
once_cell = "1.21.3"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
signal-hook = { version = "0.3.17", features = ["iterator"]}
walkdir = "2.5.0"
