[package]
name = "async-fusex"
version = "0.1.1"
edition = "2024"
documentation = "https://docs.rs/"
description = "Async fuse library to make fuse develop easier"

license = "MIT OR Apache-2.0"
repository = "https://github.com/arthur-zhang/async-fusex"
keywords = ["fuse"]
categories = ["asynchronous", "filesystem"]
authors = [
    "Arthur Zhang <happyzhangya@gmail.com>",
]

[dependencies]
aligned-utils = "1.0.2"
anyhow = "1.0.100"
async-trait = "0.1.89"
better-as = "0.2.0"
clippy-utilities = "0.1.0"
crossbeam-channel = "0.5.15"
crossbeam-utils = "0.8.21"
memchr = "2.7.6"
nix = { version = "0.28.0", features = ["fs", "ioctl", "signal", "user", "mount", "socket", ] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tracing = "0.1.43"
futures = "0.3.31"
walkdir = "2.5.0"
tracing-subscriber = "0.3.22"
