[package]
name = "async-fusex"
version = "0.1.3"
edition = "2024"
documentation = "https://docs.rs/async-fusex"
description = "Async fuse library to make fuse develop easier"

license = "MIT OR Apache-2.0"
repository = "https://github.com/arthur-zhang/async-fusex"
keywords = ["fuse"]
categories = ["asynchronous", "filesystem"]
authors = [
    "Arthur Zhang <happyzhangya@gmail.com>",
]

[dependencies]
aligned-utils = "1.0.2"
anyhow = "1.0.100"
async-trait = "0.1.89"
better-as = "0.2.0"
clippy-utilities = "0.1.0"
crossbeam-channel = "0.5.15"
crossbeam-utils = "0.8.21"
memchr = "2.7.6"
nix = { version = "0.28.0", features = ["fs", "ioctl", "signal", "user", "mount", "socket", ] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tracing = "0.1.43"
futures = "0.3.31"
walkdir = "2.5.0"
tracing-subscriber = "0.3.22"

[features]
default = ["abi-7-31"]
abi-7-9 = []
abi-7-10 = ["abi-7-9"]
abi-7-11 = ["abi-7-10"]
abi-7-12 = ["abi-7-11"]
abi-7-13 = ["abi-7-12"]
abi-7-14 = ["abi-7-13"]
abi-7-15 = ["abi-7-14"]
abi-7-16 = ["abi-7-15"]
abi-7-17 = ["abi-7-16"]
abi-7-18 = ["abi-7-17"]
abi-7-19 = ["abi-7-18"]
abi-7-20 = ["abi-7-19"]
abi-7-21 = ["abi-7-20"]
abi-7-22 = ["abi-7-21"]
abi-7-23 = ["abi-7-22"]
abi-7-24 = ["abi-7-23"]
abi-7-25 = ["abi-7-24"]
abi-7-26 = ["abi-7-25"]
abi-7-27 = ["abi-7-26"]
abi-7-28 = ["abi-7-27"]
abi-7-29 = ["abi-7-28"]
abi-7-30 = ["abi-7-29"]
abi-7-31 = ["abi-7-30"]
abi-7-32 = ["abi-7-31"]
